<resources>
    <string name="app_name">F1 - CODEP25</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="button_Ajouter">Ajouter</string>
    <string name="previous">Previous</string>

    <string name="textView_first">Veuillez ajouter des participants :</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="textView_Name">Name :</string>
    <string name="textView_Surname">Prénom :</string>
    <string name="textView_Level">Niveau :</string>
    <string name="textView_MaxLevel">/100</string>
    <string name="ParticipantLevel">00</string>
    <string name="textView_Note">Note : Vous devez rentrer suffisamment de participants pour faire des équipes de 3.</string>
    <string name="textView_Note2">Vous pouvez créer de faux participants pour compléter.</string>
    <string name="textView_NbParticipants">Nombre de participants :</string>
    <string name="NbParticipants">00</string>
    <string name="button_Terminer">TerminerCréationEquipe</string>
    <string name="textView_AppTitle">F1 Running Race - by CODEP25</string>
    <string name="button_CreateRace">Créer une course</string>
    <string name="button_CreateRace2">Créer Course</string>
    <string name="textView_second">Veuillez rentrer les informations de la course :</string>
    <string name="textView_Date">Date de début :</string>
    <string name="textView_Heure">Heure de début :</string>
    <string name="textView_RaceName">Nom :</string>
    <string name="editText_Date">jj/mm/yyyy</string>
    <string name="editText_Heure">hh:mm</string>
    <string name="editTexte_RaceName">n°1, promo 18....</string>
    <string name="textView_Note3">Note : Le nom n\'est pas obligatoire</string>
    <string name="textView_TeamList">Équipes disponibles :</string>
    <string name="textView_TeamMemberList">Membres de l\'équipe séléctionnée :</string>
    <string name="button_LaunchRace">Démarrer la course</string>
    <string name="textView_Note4">Note : Toute modification est immédiatement prise en compte.</string>
    <string name="textView_TeamList2">Ordre de passage des équipes :</string>
    <string name="textView_Note5">L\'ordre de passage se fait du haut vers le bas.</string>
    <string name="tabItem_GestionCourse">Gestion Course</string>
    <string name="tabItem_classementequipes">Classement Equipes</string>
    <string name="tabItem_classementcoureurs">Classement Coureurs</string>
    <string name="textView_TeamNumber">1</string>
    <string name="textView_TeamText">Equipe n°</string>
    <string name="button_StartChrono">Start</string>
</resources>