<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/NbParticipants"
        android:layout_width="35dp"
        android:layout_height="36dp"
        android:layout_marginStart="989dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="256dp"
        android:layout_marginBottom="264dp"
        android:text="@string/NbParticipants"
        android:textAlignment="textStart"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_Terminer"
        android:layout_width="249dp"
        android:layout_height="47dp"
        android:layout_marginStart="791dp"
        android:layout_marginTop="553dp"
        android:layout_marginEnd="240dp"
        android:layout_marginBottom="200dp"
        android:text="@string/button_Terminer"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ParticipantLevel"
        android:layout_width="48dp"
        android:layout_height="56dp"
        android:layout_marginStart="431dp"
        android:layout_marginTop="432dp"
        android:layout_marginEnd="801dp"
        android:layout_marginBottom="312dp"
        android:ems="10"
        android:hint="@string/ParticipantLevel"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Level"
        android:layout_width="89dp"
        android:layout_height="33dp"
        android:layout_marginStart="335dp"
        android:layout_marginTop="443dp"
        android:layout_marginEnd="868dp"
        android:layout_marginBottom="324dp"
        android:text="@string/textView_Level"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ParticipantSurname"
        android:layout_width="516dp"
        android:layout_height="45dp"
        android:layout_marginStart="430dp"
        android:layout_marginTop="363dp"
        android:layout_marginEnd="335dp"
        android:layout_marginBottom="392dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_MaxLevel"
        android:layout_width="100dp"
        android:layout_height="33dp"
        android:layout_marginStart="490dp"
        android:layout_marginTop="447dp"
        android:layout_marginEnd="690dp"
        android:layout_marginBottom="320dp"
        android:text="@string/textView_MaxLevel"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_NbParticipants"
        android:layout_width="287dp"
        android:layout_height="31dp"
        android:layout_marginStart="738dp"
        android:layout_marginTop="501dp"
        android:layout_marginEnd="304dp"
        android:layout_marginBottom="268dp"
        android:text="@string/textView_NbParticipants"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_Ajouter"
        android:layout_width="151dp"
        android:layout_height="57dp"
        android:layout_marginTop="543dp"
        android:layout_marginBottom="200dp"
        android:text="@string/button_Ajouter"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Name"
        android:layout_width="77dp"
        android:layout_height="36dp"
        android:layout_marginStart="340dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="863dp"
        android:layout_marginBottom="464dp"
        android:text="@string/textView_Name"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Surname"
        android:layout_width="96dp"
        android:layout_height="37dp"
        android:layout_marginStart="322dp"
        android:layout_marginTop="371dp"
        android:layout_marginEnd="862dp"
        android:layout_marginBottom="392dp"
        android:text="@string/textView_Surname"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_first"
        android:layout_width="421dp"
        android:layout_height="38dp"
        android:layout_marginTop="228dp"
        android:layout_marginBottom="534dp"
        android:text="@string/textView_first"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ParticipantName"
        android:layout_width="515dp"
        android:layout_height="49dp"
        android:layout_marginStart="430dp"
        android:layout_marginTop="287dp"
        android:layout_marginEnd="334dp"
        android:layout_marginBottom="464dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Note"
        android:layout_width="693dp"
        android:layout_height="23dp"
        android:layout_marginStart="235dp"
        android:layout_marginTop="621dp"
        android:layout_marginEnd="420dp"
        android:layout_marginBottom="156dp"
        android:singleLine="true"
        android:text="@string/textView_Note"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Note2"
        android:layout_width="625dp"
        android:layout_height="28dp"
        android:layout_marginStart="248dp"
        android:layout_marginTop="644dp"
        android:layout_marginEnd="407dp"
        android:layout_marginBottom="128dp"
        android:singleLine="true"
        android:text="@string/textView_Note2"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>