<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="1279dp"
        android:layout_height="51dp"
        android:layout_marginEnd="1dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:tabIndicator="@drawable/ic_launcher_background"
        app:tabIndicatorGravity="top"
        tools:visibility="visible">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItem_RaceManagement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/tabItem_GestionCourse" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItem_TeamLeaderboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabItem_classementequipes" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItem_RunnerLeaderboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tabItem_classementcoureurs" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_TeamCard"
        android:layout_width="255dp"
        android:layout_height="208dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="964dp"
        android:layout_marginBottom="448dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/TeamBox"
            android:layout_width="252dp"
            android:layout_height="206dp"
            android:padding="@dimen/fab_margin"
            tools:context=".view.coursetimer.TeamBox">

            <TextView
                android:id="@+id/textView_TeamNumber"
                android:layout_width="86dp"
                android:layout_height="31dp"
                android:layout_marginStart="99dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="49dp"
                android:layout_marginBottom="143dp"
                android:text="@string/textView_TeamNumber"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.944"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/RunnerBox"
                android:layout_width="182dp"
                android:layout_height="137dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="61dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0">

                <ImageView
                    android:id="@+id/img_AtelierActuel"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="88dp"
                    android:layout_marginTop="41dp"
                    android:layout_marginEnd="59dp"
                    android:layout_marginBottom="61dp"
                    android:background="@android:color/transparent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    app:srcCompat="@drawable/sprint1" />

                <ImageView
                    android:id="@+id/img_CycleNumber"
                    android:layout_width="29dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="41dp"
                    android:layout_marginEnd="112dp"
                    android:layout_marginBottom="61dp"
                    android:background="@android:color/transparent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    app:srcCompat="@drawable/passage1" />

                <TextView
                    android:id="@+id/textView_RunnerName"
                    android:layout_width="157dp"
                    android:layout_height="29dp"
                    android:layout_marginStart="13dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="124dp"
                    android:text="Nom Prénom"
                    android:textSize="21sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.387" />

                <TextView
                    android:id="@+id/textView_TeamTimer"
                    android:layout_width="62dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="62dp"
                    android:layout_marginTop="89dp"
                    android:layout_marginEnd="58dp"
                    android:layout_marginBottom="16dp"
                    android:text="00:00"
                    android:textSize="24sp"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView_textTeamBox"
                android:layout_width="91dp"
                android:layout_height="30dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="129dp"
                android:layout_marginBottom="144dp"
                android:text="@string/textView_TeamText"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.777"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>